# Crypto.com_QA_Interview_Q_1

./: .gitignore  README.md  generate_pyramid.py  pyproject.toml  test_generate_pyramid.py
